<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ftue.SignupFragment">

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/email_layout"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_marginTop="30dp"
       android:hint="@string/email">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/email_field"
           android:inputType="textEmailAddress"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/email_layout"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/password_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/signup_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </FrameLayout>

</RelativeLayout>