<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="userIdentityDto"
            type="io.blusalt.simreg.dto.UserIdentityDto" />
    </data>

    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/personal_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(userIdentityDto.documentNumber)}"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="18/0029" />

                <TextView
                    android:id="@+id/sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(userIdentityDto.sex)}"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Male" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:textColor="@color/fade_grey"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userIdentityDto.firstName)}"
                        android:textColor="@color/light_dark"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        tools:text="JSodiq" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/nationality"
                        android:textColor="@color/fade_grey"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userIdentityDto.nationality)}"
                        android:textColor="@color/light_dark"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        tools:text="Nigeria" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:textColor="@color/fade_grey"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userIdentityDto.lastName)}"
                        android:textColor="@color/light_dark"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        tools:text="Ogunyeiwa" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/dob"
                        android:textColor="@color/fade_grey"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userIdentityDto.dob)}"
                        android:textColor="@color/light_dark"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        tools:text="12/12/2020" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exp_date"
                    android:textColor="@color/fade_grey"
                    android:textStyle="bold"
                    tools:text="Expiring Date" />

                <TextView
                    android:id="@+id/exp_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_dark"
                    android:text="@{String.valueOf(userIdentityDto.expiryDate)}"
                    android:textStyle="normal"
                    tools:text="16/10/2040" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>